--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node server.js",
+    "dev-watch": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,8 +15,15 @@
     "boxen": "^5.1.2",
     "debug": "^4.3.4",
     "fastify": "^4.3.0",
+    "graphql-request": "^4.3.0",
+    "lodash": "^4.17.21",
     "mongodb": "^4.8.1",
     "nconf": "^0.12.0",
-    "require-main-filename": "^2.0.0"
+    "node-fetch": "^2.6.7",
+    "require-main-filename": "^2.0.0",
+    "unfetch": "^4.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
